--- a/src/jsMain/resources/index.html
+++ b/src/jsMain/resources/index.html
@@ -9,11 +9,12 @@
 <input id="expression" title="&& - AND, || OR" placeholder="A && (B || A)" style="width: 500px"><br>
 <p id="result">result:</p><br>
 </body>
-<script src="./BooleanExpressionSimplify.js"></script>
+<script src="./boolean-expression-simplify.js"></script>
 <script>
-    const package = window.BooleanExpressionSimplify.org.expressions
+    const package = window['boolean-expression-simplify'].org.expressions
     const { SimplerBooleanExpression } = package
     const { ConditionParser } = package.impl.parser
+    const { conditionToJson } = package
     const simplerBooleanExpression = new SimplerBooleanExpression()
     const conditionParser = new ConditionParser()
 
@@ -21,6 +22,7 @@
         try {
             const expression = document.getElementById("expression").value
             const condition = conditionParser.parse(expression)
+            console.log(conditionToJson(condition))
             const simpledCondition = simplerBooleanExpression.simplify(condition)
             document.getElementById("result").innerText = `result: ${simpledCondition.toString()}`
         } catch (e) {
